# GLFW

./: .cproject  .gitignore  .project  CMakeLists.txt  Cube  Makefile  Makefile.mac  Makefile.obsolete  README.md
SquaresGame/: .gitignore  Game.cpp  Game.h  Makefile  Makefile.mac  Rect.cpp  Rect.h  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  SpriteRenderer.cpp  SpriteRenderer.h  SquaresGame.cbp  SquaresGame.cpp  SquaresGame.sln  SquaresGame.vcxproj  SquaresGame.vcxproj.filters  Texture.cpp  Texture.h  build.sh
SquaresGame/shaders/: fragment.glsl  vertex.glsl
SquaresGame/src/: Game.cpp  Game.h  GameBase.cpp  GameBase.h  Rect.cpp  Rect.h  ResourceManager.cpp  ResourceManager.h  Shader.h  SpriteRenderer.cpp  SpriteRenderer.h  SquaresGame.cpp  TextRenderer.cpp
shaders/: 3d_fragment.glsl  3d_vertex.glsl  cubes_fragment.glsl  cubes_vertex.glsl  light_fragment.glsl  text_fragment.glsl  text_vertex.glsl
src/: CMakeLists.txt
src/Cube/: CMakeLists.txt  Cube.cpp  Cube.h  CubeGame.cpp  Game.cpp  Game.h
src/Engine/: CMakeLists.txt  Camera.cpp  Camera.h  Cube.cpp  Cube.h  CubeRenderer.cpp  CubeRenderer.h  CubesRenderer.cpp  CubesRenderer.h  GameBase.cpp  GameBase.h  Light.cpp  Light.h  LightRenderer.cpp  LightRenderer.h  Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  SpriteRenderer.cpp  TextRenderer.cpp  TextRenderer.h  Texture.cpp  Texture.h  shader_m.h  stb_truetype.h
src/SpaceInvaders/: Bullet.cpp  Bullet.h  CMakeLists.txt  Droid.cpp  Droid.h  Game.cpp  Game.h  Ship.cpp  Ship.h  SpaceInvaders.cpp
(+6 files in other folders)
